--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://root:example@127.0.0.1:27017/?authSource=admin
+MONGO_URI=mongodb://root:example@mongo:27017/?authSource=admin
 PORT=3000
